--- a/style/index.css
+++ b/style/index.css
@@ -1,4 +1,4 @@
-.layout-1{
+.flex-container{
     max-width: 468px;
     width: 100%;
     min-width: auto;
@@ -9,20 +9,20 @@
     background-color: #370617;
 }
 
-.yellow-box-1{
+.flex-child-yellow-box-1{
     width: 468px;
     height: 160px;
     margin-top: 20px;
     margin-left: 20px;
     margin-bottom: 10px;
     margin-right: 20px;
-    display: inline-flex;
+    display: flex;
     justify-content: flex-start;
     align-items: flex-end;
     background-color: #F48C06;
     border-radius: 5px;
+    position: relative;
 }
-
 
 .box-1_box{
     width: 78px;
@@ -35,7 +35,7 @@
     margin-bottom: 20px;
 }
 
-.yellow-box-2{
+.flex-child-yellow-box-2{
     width: 468px;
     height: 160px;
     margin-top: 20px;
@@ -60,7 +60,7 @@
     margin-top: 20px;
 }
  
-.yellow-box-3 {
+.flex-child-yellow-box-3{
     width: 468px;
     height: 160px;
     margin-top: 20px;
@@ -85,7 +85,7 @@
     margin-top: 20px;
 }
 
-.yellow-box-4 {
+.flex-child-yellow-box-4{
     width: 468px;
     height: 160px;
     margin-top: 20px;
@@ -111,7 +111,7 @@
 }
 
 
-.yellow-box-5 {
+.flex-child-yellow-box-5{
     width: 468px;
     height: 160px;
     margin-top: 20px;
@@ -129,6 +129,8 @@
     width: 78px;
     height: 120px;
     background-color: #9D0208;
+    color: white;
+    text-align: center;
     border-radius: 5px;
     display: inline-flex;
     justify-content: space-between;
@@ -138,7 +140,7 @@
 }
 
 
-.yellow-box-6{
+.flex-child-yellow-box-6{
     width: 468px;
     height: 160px;
     margin-top: 20px;
